src/prompts/snapshots/promptuity__prompts__select__tests__hint.snap
---
source: src/prompts/select.rs
---
state: Active
message: test message
hint: hint message
placeholder: none
input(none):
body(raw):
[38;5;10m◉[39m [4mValue1[0m
[38;5;8m◯[39m [38;5;8mValue2[39m
[38;5;8m◯[39m [38;5;8mValue3[39m
