src/prompts/snapshots/promptuity__prompts__select__tests__option_hint.snap
---
source: src/prompts/select.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(none):
body(raw):
[38;5;10m◉[39m [4mValue1[0m [38;5;8m(hint1)[39m
[38;5;8m◯[39m [38;5;8mValue2[39m
[38;5;8m◯[39m [38;5;8mValue3[39m [38;5;8m(hint3)[39m
